moved files back to src again so it makes better sense to have a tests folder for phpunit.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "JFusion\\Plugins\\universal\\": "."
+            "JFusion\\Plugins\\universal\\": "src/"
         }
     }
 }
